--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tailwindcss/typography": "^0.5.19",
     "ai": "^5.0.86",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -23,11 +22,14 @@
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.4.1",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.0.0",
     "@types/pg": "^8.15.6",
     "@types/react": "^18.3.0",
